<resources>
    <string name="app_name">Light</string>

    <!--welcome page-->
    <string name="welcome_message">Get started</string>

    <!--login page-->
    <string name="login_email_and_username">Email Address or Username</string>
    <string name="login_password">*********</string>
    <string name="login_forget_password">Forget Password</string>
    <string name="login_signin_btn">Sign in</string>
    <string name="login_divider">OR</string>
    <string name="login_no_account">don’t have an account ?</string>
    <string name="login_signup"><u>sign up</u></string>

    <string name="mode_practice">Practice</string>
    <string name="mode_record">Record</string>
    <string name="mode_challenge">Challenge</string>
    <string name="mode_setting">Setting</string>
    <string name="mode_upload">Select your music sheet file</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_view_content_description">Game View</string>
    <string name="tuner_guitar_type"><u>Guitar,&#xA;6 strings</u></string>
    <string name="tuner_guitar_name"><u>Acoustic guitar</u></string>

    <!--lesson page-->
    <string name="level_class1">Basic level</string>
    <string name="level_class2">Intermediate level</string>
    <string name="level_class3">Advance level</string>

    <!--Page name -->
    <string name="page_name1">Home</string>
    <string name="page_name2">Lesson</string>
    <string name="page_name3">Evaluate</string>
    <string name="page_name4">Tuning</string>
    <string name="page_name5">Profile</string>
    <string name="page_name6">Setting</string>

    <string name="home_page_first_container_title">Continue your lesson</string>
    <string name="home_page_first_container_subtitle">There is no progress yet. Start your journey to see it here.</string>
    <string name="home_page_first_container_button">Start your Lesson</string>

    <string name="home_page_second_container_title">Recent song</string>
    <string name="home_page_second_container_subtitle">There is no history yet. Start your practice to see your history and score here.</string>
    <string name="home_page_second_container_button">Login to Evaluate</string>

    <string name="home_page_third_container_title">Let\'s Begin</string>
    <string name="home_page_third_container_subtitle">Start your journey by taking Lesson or \nEvaluate your playing skills. </string>

    <string name="next_button">Next</string>
    <string name="back_button">Back</string>
    <string name="play_button">Play</string>

    <string name="choose_song_text">Choose a song</string>
    <string name="choose_evaluate_result">Evaluate Result</string>

    <string name="setting_text">Setting</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="logout_text">Log out</string>

    <string name="guitar_title">Guitar,\n6 Strings</string>

    <string name="history_detected_chord">Detected Chord:</string>
    <string name="history_chord">Chord:</string>
</resources>