<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.ui.LoginFragment"
    android:clipToPadding="true"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <RelativeLayout
        android:id="@+id/box_constraintLayout"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/email_and_username"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="Email address or Username"
            app:layout_constraintBottom_toTopOf="@id/email_and_username_box" />

        <EditText
            android:id="@+id/email_and_username_box"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:padding="12dp"
            android:background="@drawable/input_box"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_email_and_username"
            android:textColor="@color/grey3"
            android:textSize="14sp"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_and_username" />

        <TextView
            android:id="@+id/password"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:fontFamily="@font/poppins_medium"
            android:text="Password"
            app:layout_constraintBottom_toTopOf="@id/password_box"
            app:layout_constraintTop_toBottomOf="@id/email_and_username_box" />
        />

        <EditText
            android:id="@+id/password_box"
            android:layout_width="335dp"
            android:layout_height="48dp"
            android:layout_marginTop="128dp"
            android:padding="12dp"
            android:background="@drawable/input_box"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_password"
            android:textColor="@color/grey3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@id/password" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin_button">

        <TextView
            android:id="@+id/divider_or"
            android:layout_width="361dp"
            android:layout_height="wrap_content"

            android:fontFamily="@font/poppins_medium"
            android:text="------------ OR ------------"
            android:textAlignment="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <TextView
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@+id/no_account_text"
            android:fontFamily="@font/poppins"
            android:text="@string/login_signup"
            android:textColor="@color/purpleL4"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/no_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_no_account"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.333">

        <TextView
            android:id="@+id/guestmode_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="Guest Mode"
            android:textAlignment="center"
            android:textColor="@color/purpleN1"
            android:textSize="12sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_signin_btn"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_button" />

    <TextView
        android:id="@+id/forget_password_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/login_forget_password"
        android:textColor="@color/purpleL4"
        android:textSize="10sp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box_constraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
